# rylan-labs-shared-configs

./: .canon-metadata.yml  .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  .yamllint  COMPREHENSIVE_AUDIT_REPORT.md  LICENSE  MESH-MAN.md  Makefile  README.md  ansible.cfg  common.mk  package-lock.json  pyproject.toml  requirements.txt
.audit/: AUDIT_MANIFEST.json  AUDIT_QUICK_REFERENCE_GUIDE.md  CANONICAL_PHASED_IMPLEMENTATION_PLAN.md  CRITICAL_PHASE_ZERO_AUDIT.md  EXECUTIVE_SUMMARY.md  PHASED_TODO_LIST.md  README.md  compliance-matrix.json  symlink-validation-2026-02-04T19:45:55-06:00.json  validate-sops.json  validate-yaml.json  validate.json
docs/: CANON-INTEGRATION.md  CHANGELOG.md  INTEGRATION_GUIDE.md  MARKDOWN_STYLE_GUIDE.md  README.md  SYMLINK_SETUP.md  rotation-discipline.md  security-posture-discipline.md  trinity-execution.md
group_vars/: network_scheme.yml
linting/: .markdownlint.yaml  .shellcheckrc  .yamllint  pyproject.toml
pre-commit/: .pre-commit-config.yaml
schemas/: device-manifest-v2.2.0.json  tandem-contract-v1.0.0.json
scripts/: auto-migrate.sh  bootstrap-agent-specs.sh  generate-mesh-man.sh  install-to-repo.sh  mesh-remediate.sh  org-audit.sh  playbook-structure-linter.py  publish-cascade.sh  repo-init.sh  sentinel-expiry.sh  track-endpoint-coverage.py  update-all-repos.sh  validate-ansible.sh  validate-bash.sh  validate-python.sh  validate-rotation-readiness.sh  validate-security-posture.sh  validate-sops.sh  validate-symlinks.sh  validate-yaml.sh  (+4 more)
(+37 files in other folders)
