# RylanLabs Canonical Python Project Configuration Template
# Maturity: v2.0.0
# Guardian: Bauer (Auditor)
# Ministry: Development Standards

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rylan-project"
version = "0.1.0"
description = "Project description here"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

lint.select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (Security)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
